// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/permission_schemes_settings/permission_description should allow select with link 1`] = `
<div>
  <span
    class="permission-description"
  >
    <span
      class="inherit-link-wrapper"
    >
      Inherited from 
      <a>
        All Members
      </a>
      .
    </span>
  </span>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_description should match snapshot if inherited 1`] = `
<div>
  <span
    class="permission-description"
  >
    <span
      class="inherit-link-wrapper"
    >
      Inherited from 
      <a>
        All Members
      </a>
      .
    </span>
  </span>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_description should match snapshot with clickable link 1`] = `
<div>
  <span
    class="permission-description"
  >
    <span>
      This is a clickable description
    </span>
  </span>
</div>
`;

exports[`components/admin_console/permission_schemes_settings/permission_description should match snapshot with default Props 1`] = `
<div>
  <span
    class="permission-description"
  >
    This is the description
  </span>
</div>
`;
